--- a/index.html
+++ b/index.html
@@ -2,29 +2,40 @@
 <html>
   <head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Gaslight.js</title>
-  <meta name="author" content="Joe Rezendes">
-  <meta name="description" content="Gaslight your users">
-  <link rel="stylesheet" href="gaslight.css" type="text/css">
-  <link rel="stylesheet" href="index.css" type="text/css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+      <title>Gaslight.js</title>
+    <meta name="author" content="Joe Rezendes">
+    <meta name="description" content="Gaslight your users">
+    <link rel="stylesheet" href="gaslight.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="text/css">
   </head>
   <body>
     <div class="model-section">
 
-      <button class="bring-model">Bring Model</button>
+      <button class="bring-neverclick-model">Demo Never Click</button>
+      <button class="bring-swapclick-model">Demo Swap Click</button>
 
-      <div class="model">
+      <div class="never-click-model model">
         <button class="gaslight-exit">Exit</button>
 
         <div class="middle-model">
           <h2>Subscribe to our mailing list</h2>
           <input placeholder="email">
-          <input type="submit" />
+          <input class="submit-btn" type="submit" />
+          <p>Hit submit to exit</p>
         </div>
       </div>
 
+      <div class="swap-click-model model">
+        <h2>Donate $33 To Me</h2>
+        <div class="row">
+          <button id="donate">Donate $33</button><button id="cancel">Cancel</button>
+        </div>
+        <p>To cancel, double click the cancel button</p>
+      </div>
+
     </div>
+
     <script src="gaslight.js"></script>
     <script src="index.js"></script>
   </body>
