--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <button class="bring-neverclick-model">Demo Never Click</button>
       <button class="bring-swapclick-model">Demo Swap Click</button>
 
+      <a href="#" id="go-back">Back a page</a>
+
       <div class="never-click-model model">
         <button class="gaslight-exit">Exit</button>
 
